--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "cube-ui": "~1.12.15",
     "exif-js": "^2.3.0",
     "flyio": "^0.6.14",
+    "vant": "^2.7.1",
     "vue": "^2.6.10",
     "vuex": "^3.1.0",
     "weixin-js-sdk": "^1.2.0"
@@ -22,6 +23,7 @@
     "@vue/cli-service": "^3.11.0",
     "autoprefixer": "^9.7.1",
     "babel-eslint": "^10.0.1",
+    "babel-plugin-import": "^1.13.0",
     "eslint": "^5.16.0",
     "eslint-plugin-vue": "^5.0.0",
     "stylus": "^0.54.5",
